# rules_grafana

./: MODULE.bazel  WORKSPACE.bzlmod
grafana/: image.bzl
