module(
  name = "rules_grafana",
  version = "0.0.1",
  repo_name = "io_bazel_rules_grafana",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "io_bazel_rules_grafana_deps",
    python_version = "3.11",
    requirements_lock = "//grafana:requirements.txt",
)
use_repo(pip, "io_bazel_rules_grafana_deps")

bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "0.10.0", repo_name = "rules_pkg_grafana")
